[project]
name = "api"
version = "0.0.1"
description = "test"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "linsam", email = "samlin266118@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "fastapi==0.113.0",
    "pandas",
    "sqlalchemy==1.4.54",
    "pymysql==1.1.1",
    "loguru==0.6.0",
    "uvicorn==0.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
